--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,26 @@
+annotated-types==0.7.0
+anyio==4.10.0
 APScheduler==3.11.0
 beautifulsoup4==4.13.5
 certifi==2025.8.3
 charset-normalizer==3.4.3
+click==8.3.0
 dnspython==2.8.0
+fastapi==0.116.2
+h11==0.16.0
 idna==3.10
 lxml==6.0.1
+pydantic==2.11.9
+pydantic_core==2.33.2
 pymongo==4.15.1
 python-dotenv==1.1.1
 pytz==2025.2
 requests==2.32.5
+sniffio==1.3.1
 soupsieve==2.8
+starlette==0.48.0
+typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzlocal==5.3.1
 urllib3==2.5.0
+uvicorn==0.36.0
