--- a/app/api/requirements.txt
+++ b/app/api/requirements.txt
@@ -24,3 +24,10 @@ typing_extensions==4.15.0
 tzlocal==5.3.1
 urllib3==2.5.0
 uvicorn==0.36.0
+tensorflow
+numpy
+pillow
+scikit-learn
+python-multipart
+aiofiles
+opencv-python
