--- a/app/api/requirements.txt
+++ b/app/api/requirements.txt
@@ -4,11 +4,15 @@ annotated-types==0.7.0
 anyio==4.10.0
 APScheduler==3.11.0
 astunparse==1.6.3
+Authlib==1.6.4
 beautifulsoup4==4.13.5
 certifi==2025.8.3
+cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.3.0
+cryptography==46.0.1
 dnspython==2.8.0
+ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.116.2
 flatbuffers==25.2.10
@@ -35,15 +39,19 @@ optree==0.17.0
 packaging==25.0
 pillow==11.3.0
 protobuf==6.32.1
+pyasn1==0.6.1
+pycparser==2.23
 pydantic==2.11.9
 pydantic_core==2.33.2
 Pygments==2.19.2
 pymongo==4.15.1
 python-dotenv==1.1.1
+python-jose==3.5.0
 python-multipart==0.0.20
 pytz==2025.2
 requests==2.32.5
 rich==14.1.0
+rsa==4.9.1
 scikit-learn==1.7.2
 scipy==1.16.2
 setuptools==80.9.0
