--- a/app/api/requirements.txt
+++ b/app/api/requirements.txt
@@ -6,6 +6,7 @@ APScheduler==3.11.0
 astunparse==1.6.3
 Authlib==1.6.4
 beautifulsoup4==4.13.5
+cachetools==5.5.2
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
@@ -17,10 +18,13 @@ email-validator==2.3.0
 fastapi==0.116.2
 flatbuffers==25.2.10
 gast==0.6.0
+google-auth==2.40.3
 google-pasta==0.2.0
 grpcio==1.75.0
 h11==0.16.0
 h5py==3.14.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 joblib==1.5.2
 keras==3.11.3
@@ -40,6 +44,7 @@ packaging==25.0
 pillow==11.3.0
 protobuf==6.32.1
 pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.23
 pydantic==2.11.9
 pydantic_core==2.33.2
